Make it possible to read team names from JIRA without specifying any in the config file.

--- a/jira_agile_metrics/calculators/progressreport_template.html
+++ b/jira_agile_metrics/calculators/progressreport_template.html
@@ -212,6 +212,7 @@
                                 <td><code>{{epic_max_stories_field}}</code></td>
                             </tr>
                             {% endif %}
+                            {% if num_teams > 0 %}
                             <tr>
                                 <th>Teams</th>
                                 <td>
@@ -269,6 +270,7 @@
                                     </table>
                                 </td>
                             </tr>
+                            {% endif %}
                         </tbody>
                     </table>
 
